--- a/demo/src/test/resources/application.properties
+++ b/demo/src/test/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.dynamic.datasource.engine.type=com.alibaba.druid.pool.DruidDat
 spring.datasource.dynamic.datasource.engine.username=username
 spring.datasource.dynamic.datasource.engine.password=password
 spring.datasource.dynamic.datasource.engine.driver-class-name=org.h2.Driver
-spring.datasource.dynamic.datasource.engine.url=jdbc:h2:mem:t_engine;MODE=MYSQL;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=TRUE
+spring.datasource.dynamic.datasource.engine.url=jdbc:h2:mem:t_engine;MODE=import jakarta.annotation.Resource;;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=TRUE
 
 
 # DDL??
