--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -17,11 +17,11 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
+        <java.version>21</java.version>
 
-        <spring-boot.version>1.5.10.RELEASE</spring-boot.version>
+        <spring-boot.version>3.2.1</spring-boot.version>
         <turbo.engine.version>1.1.1</turbo.engine.version>
-        <h2.version>1.4.200</h2.version>
+        <h2.version>2.2.224</h2.version>
     </properties>
 
     <dependencies>
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.4.200</version>
+            <version>2.2.224</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -55,14 +55,14 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>21</source>
+                    <target>21</target>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.6.6</version>
+                <version>3.2.1</version>
                 <executions>
                     <execution>
                         <goals>
