--- a/engine/pom.xml
+++ b/engine/pom.xml
@@ -14,8 +14,8 @@
         <version>1.1.1</version>
     </parent>
     <properties>
-        <groovy.version>2.3.7</groovy.version>
-        <spring-boot-starter.version>1.5.10.RELEASE</spring-boot-starter.version>
+        <groovy.version>3.0.20</groovy.version>
+        <spring-boot-starter.version>3.2.1</spring-boot-starter.version>
     </properties>
 
     <dependencies>
@@ -38,11 +38,11 @@
         </dependency>
         <dependency>
             <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>com.baomidou</groupId>
-            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+            <artifactId>dynamic-datasource-spring-boot3-starter</artifactId>
             <exclusions>
                 <exclusion>
                     <groupId>org.springframework.boot</groupId>
@@ -78,6 +78,7 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
+            <type>pom</type>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
