--- a/pom.xml
+++ b/pom.xml
@@ -59,18 +59,18 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
+        <java.version>21</java.version>
 
-        <spring-boot.version>1.5.10.RELEASE</spring-boot.version>
+        <spring-boot.version>3.2.1</spring-boot.version>
         <commons-collections4.version>4.4</commons-collections4.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <mysql-connector-java.version>8.0.28</mysql-connector-java.version>
-        <druid.version>1.1.20</druid.version>
-        <baomidou-mybatis-plus.version>3.2.0</baomidou-mybatis-plus.version>
-        <baomidou-dynamic-datasource.versioin>2.5.7</baomidou-dynamic-datasource.versioin>
+        <druid.version>1.2.21</druid.version>
+        <baomidou-mybatis-plus.version>3.5.5</baomidou-mybatis-plus.version>
+        <baomidou-dynamic-datasource.versioin>4.2.0</baomidou-dynamic-datasource.versioin>
         <java-uuid-generator.version>3.1.4</java-uuid-generator.version>
         <fastjson.version>1.2.83</fastjson.version>
-        <groovy.version>2.3.7</groovy.version>
+        <groovy.version>3.0.20</groovy.version>
         <guava.version>31.0.1-jre</guava.version>
     </properties>
 
@@ -102,12 +102,12 @@
             </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
-                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                 <version>${baomidou-mybatis-plus.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
-                <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+                <artifactId>dynamic-datasource-spring-boot3-starter</artifactId>
                 <version>${baomidou-dynamic-datasource.versioin}</version>
                 <exclusions>
                     <exclusion>
@@ -135,6 +135,7 @@
                 <groupId>org.codehaus.groovy</groupId>
                 <artifactId>groovy-all</artifactId>
                 <version>${groovy.version}</version>
+                <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
